Metadata RDVS et traduction francaise pour RDVS

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GestionPhotoImmobilier.Models.Rdv
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Supprimer un  rendez-vous";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer un  rendez-vous</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous certain de vouloir supprimer ce rendez-vous?</h3>
 <div>
-    <h4>Rdv</h4>
+    <h4>Rendez-vous</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,7 +42,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Retour à l'index", "Index")
         </div>
     }
 </div>
