--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Shared/_Layout.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("À propos de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Rdvs", "Index", "Rdvs")</li>
+                    <li>@Html.ActionLink("Séances", "Index", "Seances")</li>
                 </ul>
             </div>
         </div>
