--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GestionPhotoImmobilier.Models.Rdv
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Créer un nouveau rendez-vous";
 }
 
-<h2>Create</h2>
+<h2>Créer un nouveau rendez-vous</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Rdv</h4>
+        <h4>Rendez-vous</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -50,7 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retour à l'index", "Index")
 </div>
 
 @section Scripts {
