--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GestionPhotoImmobilier.Models.Seance>
+﻿@*@model IEnumerable<GestionPhotoImmobilier.Models.Seance>*@
+@model List<GestionPhotoImmobilier.ViewModels.SeanceRdv>
 
 @{
     ViewBag.Title = "Index";
@@ -12,25 +13,31 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.DateSeance)
+            @Html.DisplayNameFor(model => model.First().DateSeance)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Agent)
+            @Html.DisplayNameFor(model => model.First().Agent)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Photographe)
+            @Html.DisplayNameFor(model => model.First().Photographe)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Client)
+            @Html.DisplayNameFor(model => model.First().Client)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Forfait)
+            @Html.DisplayNameFor(model => model.First().Forfait)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Commentaire)
+            @Html.DisplayNameFor(model => model.First().Commentaire)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Statut)
+            @Html.DisplayNameFor(model => model.First().Statut)
+        </th>
+        <th> 
+            @Html.DisplayNameFor(model => model.First().Confirmer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.First().PhotographeRDV)
         </th>
         <th></th>
     </tr>
@@ -57,6 +64,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Statut)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Confirmer)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhotographeRDV)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.SeanceId }) |
