--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Create.cshtml
@@ -15,6 +15,15 @@
         <h4>Rendez-vous</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.SeanceId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.SeanceId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SeanceId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.Confirmer, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
