--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Edit.cshtml
@@ -18,6 +18,14 @@
         @Html.HiddenFor(model => model.RdvId)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.SeanceId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.SeanceId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SeanceId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Confirmer, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
