--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Create.cshtml
@@ -16,10 +16,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.SeanceId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SeanceId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SeanceId, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.SeanceId, "Date de la Séance", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("SeanceId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SeanceId, "", new { @class = "text-danger" })
             </div>
         </div>
