View partielle afficher seance future

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
@@ -9,6 +9,7 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Seance future", "SeanceFuture")
 </p>
 <table class="table">
     <tr>
