--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Agent, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Agent, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Agent", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Agent, "", new { @class = "text-danger" })
             </div>
         </div>
