Navbar link added

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Shared/_Layout.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Rdvs", "Index", "Rdvs")</li>
                     <li>@Html.ActionLink("Séances", "Index", "Seances")</li>
+                    <li>@Html.ActionLink("Photos", "Index", "Photos")</li>
+                    <li>@Html.ActionLink("Agents", "Index", "Agents")</li>
+                    <li>@Html.ActionLink("Proprietes", "Index", "Proprietes")</li>
                 </ul>
             </div>
         </div>
