--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Ajouter un agent</h2>
 
 
 @using (Html.BeginForm()) 
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retourner à la liste", "Index")
 </div>
 
 @section Scripts {
