--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous certain de vouloir suppprimer cet agent ?</h3>
 <div>
     <h4>Agent</h4>
     <hr />
@@ -26,7 +26,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Retouner à la liste", "Index")
         </div>
     }
 </div>
