--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Edit.cshtml
@@ -26,9 +26,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Agent, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AgentId, "Agent", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Agent, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("AgentId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Agent, "", new { @class = "text-danger" })
             </div>
         </div>
