Ajout dossier Images

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Create.cshtml
@@ -15,13 +15,13 @@
         <h4>Propriete</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.ProprieteId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ProprieteId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProprieteId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Client, htmlAttributes: new { @class = "control-label col-md-2" })
