Création de la vue Sommaire de séance

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
@@ -9,3 +9,7 @@
 @Html.Partial("_InfoPropriete", Model.Propriete)
 
 @Html.Partial("_InfoForfait", Model.SeanceRdv)
+
+@Html.Partial("_InfoAgent", Model.Agent)
+
+@Html.Partial("_InfoPhotographe", Model.SeanceRdv)
