--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h2>Sommaire de séance</h2>
+<hr />
+@Html.Partial("_InfoSeanceRdv", Model.SeanceRdv)
 
 @Html.Partial("_InfoPropriete", Model.Propriete)
 
