--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoPhotographe.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoPhotographe.cshtml
@@ -1,16 +1,16 @@
 ﻿@model GestionPhotoImmobilier.ViewModels.SeanceRdv
 
-<div>
-    <h4>Seance</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
+<h4>Photographe</h4>
+<table class="table">
+    <tr>
+        <th>
             @Html.DisplayNameFor(model => model.Photographe)
-        </dt>
+        </th>
+    </tr>
 
-        <dd>
+    <tr>
+        <td>
             @Html.DisplayFor(model => model.Photographe)
-        </dd>
-    </dl>
-</div>
-
+        </td>
+    </tr>
+</table>
