--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Index.cshtml
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.Propriete.Client)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id = item.PhotoId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.PhotoId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.PhotoId })
         </td>
     </tr>
 }
