Corrections des vues pour Forfait

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Delete.cshtml
@@ -44,11 +44,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Forfait)
+            @Html.DisplayNameFor(model => model.Forfait.Nom)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Forfait)
+            @Html.DisplayFor(model => model.Forfait.Nom)
         </dd>
 
         <dt>
