--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Create.cshtml
@@ -56,9 +56,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Forfait, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ForfaitId, "Forfait", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Forfait, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("ForfaitId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Forfait, "", new { @class = "text-danger" })
             </div>
         </div>
