--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Details.cshtml
@@ -43,11 +43,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Forfait)
+            @Html.DisplayNameFor(model => model.Forfait.Nom)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Forfait)
+            @Html.DisplayFor(model => model.Forfait.Nom)
         </dd>
 
         <dt>
