--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
@@ -36,7 +36,7 @@
             @Html.DisplayNameFor(model => model.First().Client)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Forfait)
+            @Html.DisplayNameFor(model => model.First().Forfait.Nom)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.First().Commentaire)
@@ -86,7 +86,7 @@
             @Html.DisplayFor(modelItem => item.Client)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Forfait)
+            @Html.DisplayFor(modelItem => item.Forfait.Nom
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Commentaire)
