Correction des vues pour forfait et ajout de delete

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Delete.cshtml
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Forfait.Nom)
+            @Html.DisplayNameFor(model => model.Forfait)
         </dt>
 
         <dd>
