--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Details.cshtml
@@ -43,7 +43,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Forfait.Nom)
+            @Html.DisplayNameFor(model => model.Forfait)
         </dt>
 
         <dd>
