--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoForfait.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_InfoForfait.cshtml
@@ -4,7 +4,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Forfait.Nom)
+            @Html.DisplayNameFor(model => model.Forfait)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Forfait.DescriptionForfait)
