--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_SeanceFuture.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_SeanceFuture.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.First().Client)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Forfait.Nom)
+            @Html.DisplayNameFor(model => model.First().Forfait)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.First().Commentaire)
