Phone Validation pour une agence

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Modifier une agence</h2>
 
 
 @using (Html.BeginForm())
@@ -50,7 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retourner à la liste", "Index")
 </div>
 
 @section Scripts {
