--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer cette agence</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous certain de vouloir supprimer cette agence</h3>
 <div>
     <h4>Agence</h4>
     <hr />
@@ -42,7 +42,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Retourner à la liste", "Index")
         </div>
     }
 </div>
