Creation de liaisons applicatives entres les donnees
Style, quand tu delete un agent, il est delete dans l'agence etc.

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Delete.cshtml
@@ -14,9 +14,16 @@
         <dt>
             @Html.DisplayNameFor(model => model.Nom)
         </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.Agence)
+        </dt>
+
 
         <dd>
             @Html.DisplayFor(model => model.Nom)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.Agence.Nom)
         </dd>
 
     </dl>
