Photo image fonctionne (1 seule)
Capable d'upload, retreive une photo et le chemin est dans la bd.

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Details.cshtml
@@ -35,6 +35,8 @@
         </dd>
 
     </dl>
+    @{var cheminBase = ViewBag.cheminBase;}
+    <img src="@cheminBase" />
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
