--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Shared/_Layout.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Shared/_Layout.cshtml
@@ -17,18 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nom de l'application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Gestion Photos Immobilier", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                    <li>@Html.ActionLink("À propos de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Rdvs", "Index", "Rdvs")</li>
                     <li>@Html.ActionLink("Séances", "Index", "Seances")</li>
                     <li>@Html.ActionLink("Photos", "Index", "Photos")</li>
                     <li>@Html.ActionLink("Agents", "Index", "Agents")</li>
                     <li>@Html.ActionLink("Proprietes", "Index", "Proprietes")</li>
+                    <li>@Html.ActionLink("Agences", "Index", "Agences")</li>
+                    <li>@Html.ActionLink("Forfaits", "Index", "Forfaits")</li>
                 </ul>
             </div>
         </div>
