--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Create.cshtml
@@ -15,7 +15,7 @@
         <h4>Photo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <input type="file" name="imageFile" />
+        <input type="file" name="imageFile" multiple="multiple" />
 
         <div class="form-group">
             @Html.LabelFor(model => model.ProprieteId, "ProprieteId", htmlAttributes: new { @class = "control-label col-md-2" })
