fichier zip working ? yes

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
@@ -15,3 +15,11 @@
 @Html.Partial("_InfoAgent", Model.Agent)
 
 @Html.Partial("_InfoPhotographe", Model.SeanceRdv)
+
+@{
+    GestionPhotoImmobilier.ViewModels.SommairePhoto somPhoto = new GestionPhotoImmobilier.ViewModels.SommairePhoto();
+    somPhoto.Photos = Model.Propriete.Photos;
+    somPhoto.SeanceId = Model.SeanceRdv.SeanceId;
+
+    @Html.Partial("_GalleriePhoto", somPhoto);
+}
