--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Sommaire.cshtml
@@ -23,3 +23,22 @@
 
     @Html.Partial("_GalleriePhoto", somPhoto);
 }
+
+
+
+<h4>Facture</h4>
+<hr />
+<h8>Total forfait de base : @Model.PrixSeance $</h8><br />
+<h8> Prix des extras :   @if (@Model.PrixExtra == null)
+                         {
+                             <span>0 $</span>
+                         }
+                         else
+                         {
+                            <span>@Model.PrixExtra $</span>
+                         } </h8><br />
+<h8>Tps : @Model.PrixTpsSeance $</h8> <br />
+<h8>Tvq : @Model.PrixTvqSeance $</h8>
+<hr />
+<h8>Total après taxe : @Model.PrixTotalSeance $</h8>
+<hr />
