Correction pour le client
revue de sprint 2
messge erreur phone validation
trier par nom prenom photographe
bouton afficher tout seance

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
@@ -13,13 +13,15 @@
 {
     <p>
         @Html.ActionLink("Créer une nouvelle séance", "Create") |
-        @Html.ActionLink("Séances futures", "Index", new { showFuture = true })
+        @Html.ActionLink("Séances futures", "Index", new { showFuture = true }) <br />
+        @Html.ActionLink("Afficher l'ensemble des séances", "Index", new { CurrentFilter = "", searchPhotographe = "", searchStatut = ""})
     </p>
     <p>
         Par Photographe: @Html.TextBox("searchPhotographe", ViewBag.CurrentFilter as string)
         Par Statut: @Html.TextBox("searchStatut", ViewBag.CurrentFilter as string)
         <input type="submit" value="Rechercher" />
     </p>
+        
 }
 <table class="table">
     <tr>
