--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Create.cshtml
@@ -15,10 +15,11 @@
         <h4>Photo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <input type="file" name="imageFile" multiple="multiple" />
-
         <div class="form-group">
-            @Html.LabelFor(model => model.ProprieteId, "ProprieteId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <input type="file" name="imageFile" multiple="multiple" />
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProprieteId,"Client", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ProprieteId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProprieteId, "", new { @class = "text-danger" })
